src/config/service/worker/sidekiq/snapshots/roadster__config__service__worker__sidekiq__deserialize_tests__sidekiq@case_5.snap
---
source: src/config/service/worker/sidekiq/mod.rs
expression: sidekiq
---
num-workers = 1
queues = []

[redis]
uri = 'redis://localhost:6379'

[redis.enqueue-pool]
max-connections = 1

[redis.fetch-pool]
max-connections = 2

[periodic]
stale-cleanup = 'auto-clean-stale'

[app-worker]
max-retries = 5
timeout = true
max-duration = 60
disable-argument-coercion = false
