src/config/service/worker/sidekiq/snapshots/roadster__config__service__worker__sidekiq__deserialize_tests__sidekiq@case_9.snap
---
source: src/config/service/worker/sidekiq/mod.rs
expression: sidekiq
---
num-workers = 1
balance-strategy = 'round-robin'
queues = []

[redis]
uri = 'redis://[Sensitive]'

[redis.enqueue-pool]

[redis.fetch-pool]

[periodic]
stale-cleanup = 'auto-clean-stale'

[app-worker]
max-retries = 10
timeout = true
max-duration = 100
disable-argument-coercion = true

[queue-config]
